# aliter

./: .gitignore  .gitmodules  AUTHORS  Emakefile  INSTALL  Main.hs  Makefile  README.markdown  README.md  README.rst  aliter.app  aliter.cabal  aliter.py  build-scripts  install.py  start.py
Aliter/: Config.hs  GRF.hs  Hex.hs  Log.hs  Maps.hs  Objects.hs  Pack.hs  Packet.hs  Server.hs  Util.hs
Aliter/Config/: Main.hs
Aliter/Server/: Char.hs  Login.hs  Main.hs  Zone.hs
Config/: Main.hs.tmpl
aliter/: __init__.py  db.py  event.py  exceptions.py  gm.py  inter.py  log.py  misc.py  packets.py  script.py  shared.py
aliter/config/: main.py  maps.py  scripts.py
aliter/objects/: __init__.py  account.py  actor.py  character.py  guild.py  homunculus.py  inventory.py  item.py  manager.py  map.py  mercenary.py  model.py  monster.py  npc.py  party.py  pet.py  servers.py  warp.py
aliter/sessions/: char.py  login.py  (+1 more)
app/: constants.py  db.py  event.py  exceptions.py  log.py  misc.py  packets.py  script.py  shared.py
conf/: config.yaml  maps.yaml  scripts.yaml
config/: NO_TOUCHING  __init__.py  api.erl  main.erl  main.py  maps.py
ebin/: .gitignore  aliter.app  api_pb.beam
include/: records.hrl
lib/: gen_listener_tcp.erl  npc.ex  npc.lfh
priv/: .gitignore  api.proto  apitest.erl  extern  maps
script/: test.py  test.txt
sql/: items.sql  main.sql  monsters.sql
src/: aliter.app.src  aliter.erl  aliter_config.erl  aliter_sup.erl  api.erl  config.erl  db.erl  gen_packet_server.erl  gen_server_tcp.erl  log.erl  maps.erl  misc.erl  nif.c  nif.erl  packets.erl
(+66 files in other folders)
